# bn

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
plugin/bn_agent_bridge/: bridge.py  paths.py  plugin.json  version.py
scripts/: release.py
skills/binary-ninja-cli/: SKILL.md
skills/bn/: SKILL.md
skills/bn/agents/: openai.yaml
src/bn/: __init__.py  cli.py  output.py  paths.py  transport.py  version.py
src/bn/assets/: __init__.py
src/bn/assets/plugin/bn_agent_bridge/: __init__.py  bridge.py  errors.py  paths.py  plugin.json  python_exec.py  server.py  targets.py  version.py
tests/: test_bridge.py  test_cli.py  test_output.py  test_packaging.py  test_transport.py
